# BSN

./: .gitignore  README.md
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .linux.home.env  CHANGELOG  Dockerfile  README.md  create_certificates.sh  package-lock.json  package.json  tsconfig.json
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/: app.module.ts  main.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/assets/datasets/: .gitattributes  compress_dataset.py  dataset_01.json  dataset_02.json  dataset_03.json  fullbsn.json  maria-dataset.json  mathias-02.json  mathias-iso.json
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/bsn-client/: bsn-client.service.spec.ts  bsn-client.service.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/device/: device.controller.spec.ts  device.controller.ts  device.dto.ts  device.service.spec.ts  device.service.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/sessions/: sessions.controller.spec.ts  sessions.controller.ts  sessions.dto.ts  sessions.module.ts  sessions.service.simulator.ts  sessions.service.spec.ts  sessions.service.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/sessions/dto/: bsndata.dto.ts  bsnsession.dto.ts  create-bsndata-response.dto.ts  create-bsndata.dto.ts  query.dto.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/src/sessions/interfaces/: bsncategory.interface.ts  bsndatum.interface.ts  bsnevent.interface.ts  bsnsession.interface.ts  pipeline-stages.interface.ts  time-series.interface.ts
BIONIC_AI_CHIP_INTERFACE/bionic-ai-chip-interface/test/: app.e2e-spec.ts
BSN_NORDIC/sn-client-library/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  License.txt  README.md  build_package.sh  cmake-variants.yaml  docker_build.sh
BSN_NORDIC/sn-client-library/apps/: CMakeLists.txt  sn-client-cli.cpp
BSN_NORDIC/sn-client-library/cmake/: CodeCoverage.cmake  config.h.in
BSN_NORDIC/sn-client-library/docs/: CMakeLists.txt  Doxyfile.in
BSN_NORDIC/sn-client-library/include/: Debug.h  SNClient.h  SNClientLib.h  SNClientTransport.h  SNProtocol.h  SNSensorTypes.h  SNSerialMessageFraming.h  SNUtils.h
BSN_NORDIC/sn-client-library/src/: CMakeLists.txt  Debug.cpp  SNClient.cpp  SNClientImpl.cpp  SNClientImpl.h  SNClientTransport.cpp  SNClientTransportSerialPort.cpp  SNClientTransportSerialPort.h  SNProtocol.cpp  SNSensorTypes.cpp  SNSerialMessageFraming.cpp  SNUtils.cpp
BSN_NORDIC/sn-client-library/tests/: CMakeLists.txt  SNClientTransportMockup.hpp  SNClientTransportSerialPort_test.cpp  SNClientTransport_test.cpp  SNClient_endtoend_test.cpp  SNClient_test.cpp  SNProtocol_test.cpp  SNSensorTypes_test.cpp  SNSerialMessageFraming_test.cpp  SNUtils_test.cpp  catch_main.cpp
LICENSE_PROJECT/: package-lock.json  package.json
LICENSE_PROJECT/src/: app.js
LICENSE_PROJECT/src/controller/: db_operations_controller.js  home_controller.js  refresh_token_controller.js  user_login_post_controller.js  user_login_view_controller.js  user_logout_controller.js  user_registration_controller.js  user_registration_view_controller.js
LICENSE_PROJECT/src/routes/: db_operations.js  home.js  refresh_token.js  user_login.js  user_logout.js  user_registration.js
LICENSE_PROJECT/src/utils/: DB_Connections.js  JW_Token_Verification.js
LICENSE_PROJECT/src/views/: license_info_view.ejs  login_view.ejs  registration_view.ejs
